# rust-project

./: Cargo.toml  Dockerfile  main.rs
api-crud/: Cargo.toml
api-crud/src/: main.rs
api-crud/src/auth/: mod.rs
api-crud/src/auth/api/: task.rs
api-crud/src/auth/handlers/: auth_handler.rs
api-crud/src/auth/repositories/: auth_repository.rs
api-crud/src/auth/routes/: auth_router.rs
api-crud/src/auth/services/: auth_service.rs
api-crud/src/config/: db.rs
api-crud/src/user/: mod.rs
api-crud/src/user/handlers/: user_handler.rs
api-crud/src/user/helpers/: user_heper.rs
api-crud/src/user/models/: user_model.rs
api-crud/src/user/repositories/: user_repository.rs
api-crud/src/user/routes/: user_router.rs
api-crud/src/user/services/: user_service.rs
crud-api/: Cargo.toml
crud-api/src/: main.rs
crud_api/: .env  Cargo.toml
crud_api/src/: api.rs
desktop_app/src-tauri/: tauri.conf.json
hello-project/: Cargo.toml
hello-project/src/: indal.rs  main.rs
indal/: Cargo.toml
indal/src/: main.rs
indal/src/models/: user_model.rs
indal/src/test/: main.rs
new-project/: Cargo.toml
rust-project-1/: Cargo.toml
test-project/: .env  Cargo.toml  test.http
test-project/src/: main  main.rs  test.rs
test-project/src/constants/: global_constants.rs
test-project/src/db/: db.rs
test-project/src/handlers/: auth_handlers.rs  mod.rs  user_handlers.rs
test-project/src/middleware/: auth.rs
test-project/src/repositories/: user_repository.rs
test-project/src/routes/: auth.rs  mod.rs  user_routes.rs
test-project/src/services/: user_service.rs
(+16 files in other folders)
