[package]
name = "api-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.7.0"
env_logger = "0.11.0"
log = "0.4.20"
chrono = { version = "0.4.31", features = ["serde"] }
actix-cors = "0.6.4"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
