[package]
name = "test-project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = "1.0.216"
serde_json = "1.0.134"
utoipa = { version = "3.5.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
env_logger = "0.10"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
dotenv = "0.15.0"
async-trait = "0.1.83"
fake = { version = "2.9", features = ["derive", "uuid"] }
uuid = { version = "1.7", features = ["v4"] }
